--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,8 +9,8 @@
         <li>salt and pepper to taste</li>
         <li>1 (16 ounce) jar spaghetti sauce</li>
         <li>1 clove garlic, minced</li>
-        <li>½ pound shredded mozzarella cheese</li>
-        <li>½ pound shredded Cheddar cheese</li>
+        <li>1/2 pound shredded mozzarella cheese</li>
+        <li>1/2 pound shredded Cheddar cheese</li>
         <li>1 pint ricotta cheese</li>
     </ul>
 
